# icu4x_bidi

./: .gitignore  Cargo.toml  README.md  build.sh  diplomat.config.js  icu4x_bidi.js  icu4x_bidi_example.mjs  icu_capi_skiawasm.js  ld.py  package-lock.json  package.json  webpack.config.js
lib/: _files.txt
src/: lib.rs
