# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_capi_skiawasm"
description = "Skia WASM bindings for ICU4X"
publish = false
version = "0.1.0"
authors = ["The ICU4X Project Developers", "mdebbar@google.com"]
edition = "2021"
resolver = "2"
repository = "https://github.com/mdebbar/icu4x_bidi"
license-file = "LICENSE"
categories = ["internationalization"]
# Keep this in sync with other crates unless there are exceptions
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies.icu_capi]
version = "1.0.0"
default-features = false
features = [
    "any_provider",
    "logging",
]

[dependencies]
icu = { version = "1.0.0", default-features = false }
icu_provider = { version = "1.0.1", default-features = false }
icu_provider_adapters = { version = "1.0.0", default-features = false }
icu_datagen = { version = "1.0.2", default-features = false }
litemap = { version = "0.6.0", default-features = false }
zerovec = { version = "0.9.1", default-features = false }

[features]
empty_data = []

# LTO is needed for WASM and other size-optimized builds,
# and it improve the performance of benchmarks
[profile.release]
lto = true

[profile.release-opt-size]
inherits = "release"
opt-level = "s"

# Enable debug information specifically for memory profiling.
# https://docs.rs/dhat/0.2.1/dhat/#configuration
#
# 2021-01-08: This would be nicer as a named profile, e.g. [profile.memory]
# https://github.com/rust-lang/cargo/issues/6988
[profile.bench]
debug = true
debug-assertions = false
